load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

filegroup(
    name = "anyscale_cli_sources",
    srcs = glob(["anyscale/**/*.py"]) + [
        "README.md",
        "anyscale/anyscale-cloud-setup.yaml",
        "anyscale/anyscale-cloud-setup-gcp.yaml",
        "anyscale/anyscale-cloud-setup-gcp-oa.yaml",
        "anyscale/anyscale-cloud-setup-oa.yaml",
        "anyscale/webterminal/bash-preexec.sh",
        "requirements.in",
        "setup.py",
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "anyscale",
    srcs = glob(["anyscale/**/*.py"]),
    data = [
        "anyscale/anyscale-cloud-setup.yaml",
        "anyscale/anyscale-cloud-setup-gcp.yaml",
        "anyscale/anyscale-cloud-setup-gcp-oa.yaml",
        "anyscale/anyscale-cloud-setup-oa.yaml",
        "anyscale/shared_anyscale_utils/default_anyscale_aws.yaml",
        "anyscale/shared_anyscale_utils/default_anyscale_gcp.yaml",
        "anyscale/webterminal/bash-preexec.sh",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("boto3"),
        requirement("botocore"),
        requirement("aiohttp"),
        requirement("certifi"),
        requirement("click"),
        requirement("colorama"),
        requirement("expiringdict"),
        requirement("GitPython"),
        requirement("halo"),
        requirement("jsonpatch"),
        requirement("jsonschema"),
        requirement("packaging"),
        requirement("pathspec"),
        requirement("pydantic"),
        requirement("python-dateutil"),
        requirement("requests"),
        requirement("rich"),
        requirement("six"),
        requirement("tabulate"),
        requirement("urllib3"),
        requirement("wrapt"),
        requirement("pyyaml"),
        requirement("tqdm"),
        requirement("humanize"),
        requirement("tzlocal"),
        requirement("google-cloud-compute"),
        requirement("google-cloud-resource-manager"),
        requirement("google-api-python-client"),
        requirement("google-cloud-filestore"),
        requirement("google-cloud-storage"),
    ],
)

py_binary(
    name = "bin",
    srcs = [
        "anyscale/scripts.py",
    ],
    exec_compatible_with = ["//:run_in_hermetic_python"],
    main = "anyscale/scripts.py",
    deps = [
        ":anyscale",
    ],
)

exports_files([
    "setup.py",
    "anyscale/version.py",
    "requirements.in",
])
